--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div class="container">
     <header class="nav-header">
+        <button id="btn"><i class="fa-regular fa-moon"></i><hr><i class="fa-solid fa-sun"></i></button>
         <div class="social-media">
             <a href="https://www.instagram.com/alirtaskiran" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
@@ -167,11 +168,15 @@
                 <div class="language">
                     <h1 class="default-header">DİLLER</h1>
                     <hr>
+                    <h3>Türkçe</h3>
+                    <p>Anadil</p>
+
                     
                 </div>
             </div>
         </div>
         </main>
     </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
