English Language Added!

--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
                     <hr>
                     <h3>Türkçe</h3>
                     <p>Anadil</p>
+                    <h3>İngilizce</h3>
+                    <p>Başlangıç</p>
 
                     
                 </div>
